--- a/src/components/CreateLayout/CreateLayout.css
+++ b/src/components/CreateLayout/CreateLayout.css
@@ -2,10 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 20px;
 }
+
 
 .label-container {
   display: flex;
+  justify-content: space-between;
   margin-bottom: 20px;
 }
 
@@ -26,6 +29,7 @@ input[type="number"] {
 
 .categories {
   display: flex;
+  justify-content: space-between;
   margin-bottom: 20px;
 }
 
