--- a/src/components/CreateLayout/Plot.css
+++ b/src/components/CreateLayout/Plot.css
@@ -3,14 +3,15 @@
     justify-content: center;
     align-items: center;
     height: 50px;
+    min-width: 100px;
     background-color: #f2f2f2;
     border: 1px solid #333;
-    border-radius: 5px;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 12px;
     color: #333;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
+    margin: 0;
   }
   
   .box:hover {
