--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,13 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Times New Roman', Times, serif
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #9f9b9e;
+  background-image: url('../public/images/bg-3.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
