--- a/src/components/CreateLayout/CreateLayout.css
+++ b/src/components/CreateLayout/CreateLayout.css
@@ -10,6 +10,7 @@
 .label-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 20px;
 }
 
@@ -17,6 +18,7 @@ label {
   display: flex;
   flex-direction: column;
   margin-right: 20px;
+  margin-bottom: 10px;
 }
 
 input[type="number"] {
@@ -35,16 +37,18 @@ input[type=number]::-webkit-inner-spin-button {
   margin: 0;
 }
 
-
 .categories {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
 }
 
 button {
-  padding: 10px;
+  padding: 8px;
   margin-right: 10px;
+  margin-bottom: 10px;
   border: none;
   border-radius: 5px;
   background-color: #0b5bac;
@@ -65,11 +69,13 @@ button:hover {
   justify-content: center;
   align-items: center;
   margin-top: 20px;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .map {
   display: grid;
-  grid-template-columns: repeat(10, 50px);
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
   grid-gap: 10px;
 }
 
@@ -81,11 +87,27 @@ button:hover {
   font-size: 14px;
   padding: 8px 16px;
   cursor: pointer;
+  margin-top: 10px;
 }
+
 
 .reset-button:hover {
   background-color: #353030;
 }
 
-
-
+@media screen and (max-width: 600px) {
+  label {
+    margin-right: 0;
+    width: 100%;
+  }
+  
+  input[type="number"] {
+    width: 100px;
+  }
+  
+  button {
+    padding: 6px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+}
