--- a/src/components/CreateLayout/Plot.css
+++ b/src/components/CreateLayout/Plot.css
@@ -11,7 +11,6 @@
     color: #333;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
-    margin: 0;
   }
   
   .box:hover {
@@ -43,6 +42,7 @@
       min-width: 60px;
       font-size: 8px;
       height: 40px;
+      overflow-y:hidden;
     }
   
     .map {
