--- a/src/components/CreateLayout/Plot.css
+++ b/src/components/CreateLayout/Plot.css
@@ -5,7 +5,7 @@
     height: 50px;
     min-width: 100px;
     background-color: #f2f2f2;
-    border: 1px solid #333;
+    border: 2px solid #e19e0c;
     font-weight: bold;
     font-size: 10px;
     color: #333;
